--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.18.0",
     "@types/node": "22.3.0",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
