--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "18.3.1",
     "react-icons": "^5.3.0",
     "tailwindcss": "3.4.10",
-    "typescript": "5.5.4"
+    "typescript": "5.5.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/react": "^18.3.3"
