--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "22.3.0",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
+    "axios": "^1.7.4",
     "classnames": "^2.5.1",
     "easymde": "^2.18.0",
     "eslint": "8.57.0",
@@ -23,6 +24,7 @@
     "prisma": "^5.18.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
     "react-simplemde-editor": "^5.2.0",
     "tailwindcss": "3.4.10",
